--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,7 @@
   <article class="hentry">
     <div class="entry-content">
       <h1 class="post-title entry-title">{{ page.title }}</h1>
+        <span>{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}</span>
       {{ content }}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
